--- a/Data_Preprocessing.ipynb
+++ b/Data_Preprocessing.ipynb
@@ -1,9 +1,18 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "eedde755",
+   "metadata": {},
+   "source": [
+    "# GenePattern Notebook: Data Preprocessing Assignment\n",
+    "### Author Name: Vinuthna Maradana"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "785a5c78",
+   "execution_count": null,
+   "id": "d28f94a4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,27 +21,46 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4f129d3d",
+   "metadata": {},
+   "source": [
+    "# P1: Load a GCT file into a DataFrame"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "id": "3c74c24b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Problem 1\n",
+    "# A function that reads GenePattern GCT files.\n",
     "# Inputs: a GenePattern GCT file, An optional summary parameter, boolean, with a default value of False.\n",
     "# Output: a Pandas DataFrame containing the contents of the input file\n",
     "\n",
     "def read_gct(filepath, summary=False):\n",
+    "    # Discard the headers by skipping first two rows\n",
     "    df = pd.read_csv(filepath, sep='\\t', skiprows=2)\n",
+    "    # Change the first two columns as indexes of the DataFrame\n",
     "    df.set_index(['Name', 'Description'], inplace=True)\n",
+    "    # Print the number of rows and columns if summary parameter is set to True\n",
     "    if summary:\n",
     "        print(f\"Rows: {df.shape[0]}, Columns: {df.shape[1]}\")\n",
     "    return df"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "0710e826",
+   "metadata": {},
+   "source": [
+    "# P2: Load Sample Datasets"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 27,
    "id": "3e56a0ae",
    "metadata": {},
    "outputs": [
@@ -1937,13 +1965,14 @@
        "TIMP3    NCBI Gene ID: 7078       19961.9552  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Problem 2A\n",
+    "# Read the file https://datasets.genepattern.org/data/test_data/BRCA_minimal_60x19.gct\n",
+    "# and print the summary\n",
     "\n",
     "min_df = read_gct(\"BRCA_minimal_60x19.gct\", True)\n",
     "min_df"
@@ -1951,7 +1980,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 28,
    "id": "01785d9a",
    "metadata": {},
    "outputs": [
@@ -2604,21 +2633,30 @@
        "[20783 rows x 40 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Problem 2B\n",
+    "# Read the file https://datasets.genepattern.org/data/test_data/BRCA_large_20783x40.gct\n",
+    "# without setting a value of the parameter summary in your function call\n",
     "\n",
     "df = read_gct(\"BRCA_large_20783x40.gct\")\n",
     "df"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8f0d0cd3",
+   "metadata": {},
+   "source": [
+    "# P3: Plot Histograms for Specific Samples"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "id": "5727a379",
    "metadata": {},
    "outputs": [
@@ -2672,10 +2710,9 @@
     }
    ],
    "source": [
-    "# Problem 3A\n",
     "# Using the data in the DataFrame from #2b, plot a histogram for each of the following columns. \n",
     "# Limit the maximum histogram value to 50000. Make sure that your histograms are labeled with the\n",
-    "# sample name that they are displaying (A7-A0DB-normal)\n",
+    "# sample name that they are displaying A7-A0DB-normal, A7-A13E-normal, BH-A0B3-primary, BH-A0B5-primary.\n",
     "\n",
     "samples = ['A7-A0DB-normal', 'A7-A13E-normal', 'BH-A0B3-primary', 'BH-A0B5-primary']\n",
     "\n",
@@ -2687,12 +2724,20 @@
     "    plt.xlim(0, 50000)\n",
     "    plt.xlabel('Expression Level')\n",
     "    plt.ylabel('Frequency')\n",
-    "    plt.tight_layout()\n"
+    "    plt.tight_layout()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "731e9df0",
+   "metadata": {},
+   "source": [
+    "# P4: Compute Mean, Median, Standard Deviation per sample"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
    "id": "ee5a5986",
    "metadata": {},
    "outputs": [
@@ -2745,25 +2790,36 @@
     }
    ],
    "source": [
-    "# Problem 4\n",
     "# Using the data in the DataFrame from #2b, print out a DataFrame containing one row for each \n",
     "# sample, with the following columns computed: Sample name, Mean, Median, Standard deviation\n",
     "\n",
+    "# Collect all the samples\n",
     "samples = df.columns \n",
     "\n",
+    "# Create a stats dataframe with the columns required\n",
     "stats = pd.DataFrame(columns=['Sample Name', 'Mean', 'Median', 'Standard Deviation'])\n",
+    "# Iterate through samples and calculate mean, median and standard deviation of each sample\n",
     "for i, sample in enumerate(samples):\n",
     "    data = df[sample]\n",
     "    mean = data.mean()\n",
     "    med = data.median()\n",
     "    sd = data.std()\n",
+    "    # Insert the sample name and statistics into the dataframe\n",
     "    stats.loc[i] = [sample, mean, med, sd]\n",
     "print(stats)"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2367f0a0",
+   "metadata": {},
+   "source": [
+    "# P5A: Filter Rows based on Maximum Expression Value"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 31,
    "id": "4c750a2f",
    "metadata": {},
    "outputs": [
@@ -3416,24 +3472,73 @@
        "[13427 rows x 40 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# Problem 5A\n",
-    "# Filter out (remove) the rows whose maximum value is less than 1000.\n",
+    "# Filter out genes whose maximum expression across all samples is less than 1000\n",
     "\n",
+    "# Calculate the max expression value across each row or all samples per gene \n",
     "row_max = df[samples].max(axis=1)\n",
+    "# Keep all the rows where the max >= 1000\n",
     "df_filtered = df[row_max >= 1000]\n",
     "df_filtered"
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e61b77e9",
+   "metadata": {},
+   "source": [
+    "# P5B: Filtered Gene Expression Statistics"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 33,
    "id": "3e7ef089",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "       Sample Name         Mean  Median\n",
+      "0   A7-A0DB-normal  3608.259552  1150.0\n",
+      "1   A7-A13E-normal  3647.490728  1252.0\n",
+      "2  BH-A0B3-primary  4441.815893  1534.0\n",
+      "3  BH-A0B5-primary  4360.158710  1899.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "samples = ['A7-A0DB-normal', 'A7-A13E-normal', 'BH-A0B3-primary', 'BH-A0B5-primary']\n",
+    "stats_filtered = pd.DataFrame(columns=['Sample Name', 'Mean', 'Median'])\n",
+    "\n",
+    "# Loop through the specified samples and compute the mean and median from the filtered DataFrame\n",
+    "for sample in samples:\n",
+    "    mean = df_filtered[sample].mean() \n",
+    "    median = df_filtered[sample].median()\n",
+    "    # Add the sample name and statistics to stats_filtered dataframe\n",
+    "    stats_filtered = stats_filtered.append({'Sample Name': sample, 'Mean': mean, 'Median': median}, ignore_index=True)\n",
+    "\n",
+    "print(stats_filtered)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "552d5775",
+   "metadata": {},
+   "source": [
+    "# P5B: Histograms for Selected Samples"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "8c792404",
    "metadata": {},
    "outputs": [
     {
@@ -3486,18 +3591,7 @@
     }
    ],
    "source": [
-    "# Problem 5B\n",
-    "# What are the mean and median of each column after applying this filter? \n",
-    "# Plot the histograms of the same 4 columns from question #3.\n",
-    "\n",
-    "samples = ['A7-A0DB-normal', 'A7-A13E-normal', 'BH-A0B3-primary', 'BH-A0B5-primary']\n",
-    "stats_filtered = pd.DataFrame(columns=['Sample Name', 'Mean', 'Median'])\n",
-    "for i, sample in enumerate(samples):\n",
-    "    if stats.loc[i]['Sample Name'] == sample:\n",
-    "        mean = stats.loc[i]['Mean']\n",
-    "        median = stats.loc[i]['Median']\n",
-    "        stats_filtered.loc[i] = [sample, mean, median]\n",
-    "    \n",
+    "# Plot the histograms for the same four columns from Problem 3. Limit the maximum histogram value to 50000.\n",
     "for sample in samples:\n",
     "    plt.hist(df_filtered[sample], bins=50, range=(0,50000))\n",
     "    plt.title(sample)\n",
@@ -3506,14 +3600,6 @@
     "    plt.ylabel('Frequency')\n",
     "    plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8c792404",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
